# CONTROL-PROJECT-2425

./: README.md  global_to_polar.py
catkin_ws/devel/lib/pkgconfig/: key_teleop.pc  rplidar_ros.pc
catkin_ws/devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
catkin_ws/src/TBD5/: CMakeLists.txt  package.xml
catkin_ws/src/TBD5/launch/: IMPORTANT  dynamic_traj.launch  dynamical_obstacle.launch  key_teleop.launch  lidar_visual.launch  obstacle.launch  obstacle_modeling.launch  path_follow.launch  smoothed_obs.launch  task3_emergency_stop.launch
catkin_ws/src/TBD5/rviz/: TBD5_rviz.rviz  path_follow_rviz.rviz
catkin_ws/src/TBD5/src/: .purepursuit_fx2.py.swp  .qualTBD5.py.swo  .qualTBD5.py.swp  Lidar_takein.py  avoidance.py  controller_node_ih.py  controller_with_avoidance.py  controller_with_avoidance2.py  controller_with_avoidance3.py  count.py  dynamic_obstacle_detection.py  dynamic_obstacle_detection_idris.py  dynamic_trajectory.py  fixing_avoidance.py  global_to_polar.py  helloworld.py  hist_visual.py  lidar_visual.py  obstacle_modelling.py  path_planning.py  (+16 more)
catkin_ws/src/lidar_mapping/: CMakeLists.txt  package.xml
catkin_ws/src/lidar_mapping/rviz/: config.rviz
catkin_ws/src/lidar_mapping/scripts/: engine.py  engine_ros.py  grid_map.py  helper.py  main.py  mapping.py
catkin_ws/src/lidar_mapping/scripts/local/: geometry_msgs.py  map_msgs.py  nav_msgs.py  sensor_msgs.py  std_msgs.py
catkin_ws/src/low_level_interface/: CMakeLists.txt  README.md  lli.sublime-workspace  package.xml
catkin_ws/src/tutorial_pkg/: CMakeLists.txt  package.xml  qualTDB5.py
(+27 files in other folders)
